syntax = "proto2";
package shipping_fee_type;
option go_package = "etop.vn/backend/pb/etop/etc/shipping_fee_type";

import "gogoproto/gogo.proto";
option (gogoproto.gogoproto_import)         = false;

enum ShippingFeeType {
    main = 0;
    return = 1;
    adjustment = 2;
    insurance = 3;
    tax = 4;
    other = 5;
    cods = 6;
    address_change = 7;
    discount = 8;
    unknown = 127;
}
